Fix automatic reloading.

--- a/built/index.html
+++ b/built/index.html
@@ -1,4 +1,4 @@
-<meta charset=UTF-8><meta content=width=device-width,initial-scale=1.0 name=viewport><meta content=ie=edge http_equiv=X-UA-Compatible><link href=main.css rel=stylesheet><title>Taneda Santōka</title><body class="bg-neutral-50 dark:bg-neutral-900 flex flex-col items-center selection:bg-neutral-200/75 dark:selection:bg-neutral-700/75"><main><h1>Hello, squirrld!</h1></main><script type=module>// Use ES module import syntax to import functionality from the module
+<meta charset=UTF-8><meta content=width=device-width,initial-scale=1.0 name=viewport><meta content=ie=edge http_equiv=X-UA-Compatible><link href=main.css rel=stylesheet><title>Taneda Santōka</title><body class="bg-neutral-50 dark:bg-neutral-900 dark:text-white flex flex-col items-center selection:bg-neutral-200/75 dark:selection:bg-neutral-700/75"><main><h1>Hello, squirrel!</h1></main><script type=module>// Use ES module import syntax to import functionality from the module
 // that we have compiled.
 //
 // Note that the `default` import is an initialization function which
